# hmi_telegram

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
examples/: eegpsr_grammar.fcfg
launch/: test_autocompletions.launch
scripts/: telegram_autocompletions
src/hmi_telegram/: __init__.py  telegram_autocompletions.py
test/: test_autocompletions.py  test_import.py
