<?xml version="1.0"?>
<package>
  <name>hmi_telegram</name>
  <version>0.0.1</version>
  <description>hmi_telegram allows you to perform HMI queries to a user connected via Telegram.
  Because HMI queries define a Context Free Grammar, a list of completions can be suggested.
  These are presented to the user in a list of buttons to pick a next word from</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>grammar_parser</run_depend>
  <run_depend>hmi</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>telegram_ros</run_depend>

</package>
