<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hmi_telegram</name>
  <version>0.0.1</version>
  <description>hmi_telegram allows you to perform HMI queries to a user connected via Telegram.
  Because HMI queries define a Context Free Grammar, a list of completions can be suggested.
  These are presented to the user in a list of buttons to pick a next word from</description>

  <maintainer email="loy.vanbeek@gmail.com">Loy van Beek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grammar_parser</depend>
  <depend>hmi</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>telegram_ros</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>hmi_msgs</exec_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python-sphinx-autoapi-pip</doc_depend>
  <doc_depend>python-sphinx-rtd-theme-pip</doc_depend>
  <doc_depend>python3-yaml</doc_depend>

</package>
